# DomiObstructionMCPServer

./: .gitignore  DEPLOYMENT.md  README.md  README_USER.md  docker-compose.yml
.cursor/: mcp.json
.cursor/skills/domi-obstruction-mcp/: README.md  SKILL.md  examples.md
.github/: CODEOWNERS
client/: README_CLIENT.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  FASTMCP_TO_SKILL_AND_CLI.md  OPEN_SOURCE_BEST_PRACTICES.md  QUICK_REFERENCE.md  README_CONVERSION.md  README_USER.md  SUMMARY.md  WINDOWS_SUPPORT.md
server/: .dockerignore  CLI_README.md  CLI_USAGE.md  Dockerfile_HTTP  Dockerfile_Stdio  Eliza_Furnace_-__Home_via_Panther_Hollow.gpx  README_SERVER.md  SKILL.md  WINDOWS_INSTALL.md  cli.py  fly.toml  install_cli.ps1  install_cli.sh  main.py  pyproject.toml  test_cli.ps1  test_cli.sh  wprdc.py
