[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = []

[project]
name = "domiobstructionmcpserver"
version = "0.1.0"
description = "MCP server for WPRDC DOMI obstruction data"
readme = "README_SERVER.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    # MCP spec 2025-11-25 (https://modelcontextprotocol.io/specification/2025-11-25); SDK 1.23.0+
    "mcp[cli]>=1.23.0",
    "python-dotenv>=1.0.0",
    "cyclopts>=4.5.1",
    "gpxpy>=1.6.2",
    "shapely>=2.0.7"
]
